--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -22,9 +22,17 @@
   color: #000000;
 }
 
+#menu_top li a:active {
+  color: #808080;
+}
+
 #back_button {
   text-decoration: none;
   color: #000000;
+}
+
+#back_button:active {
+  color: #808080;
 }
 
 h1 {
@@ -34,8 +42,8 @@ h1 {
     text-align: center;
 }
 
-p {
-  padding: 3% 0%;
+h2 {
+  padding: 3% 0% 0% 0%;
 }
 
 #contact_form {
@@ -50,10 +58,13 @@ p {
 
 #contact_form input[type="text"] {
     width: 100%;
+    margin: 3% 0% 0% 0%;
     padding: 1%;
+    font-size: 20px;
     border: solid black;
-    border-width: 1px;
     border-radius: 6px;
+    border-width: thin;
+    border-style: solid;
 }
 
 #contact_form input[type="submit"] {
@@ -61,20 +72,24 @@ p {
     margin: 3% 0% 0% 0%;
     padding: 1%;
     font-size: 20px;
-    border: none;
-    background-color: #FF585D;
-    color: #ffffff;
     border-radius: 6px;
+    border-color: #FF585D;
+    border-width: thin;
+    border-style: solid;
+    background-color: #FFFFFF;
+    color: #FF585D;
 }
 
 #contact_form input[type="submit"]:active {
     width: 100%;
     margin: 3% 0% 0% 0%;
     font-size: 20px;
-    border: none;
-    background-color: #ffffff;
-    color: #FF585D;
     border-radius: 6px;
+    border-color: #FF585D;
+    border-width: thin;
+    border-style: solid;
+    background-color: #FF585D;
+    color: #FFFFFF;
 }
 
 footer {
@@ -114,65 +129,88 @@ footer {
       color: #000000;
     }
 
+    #menu_top li a:hover {
+      color: #808080;
+    }
+
+    #back_button {
+      text-decoration: none;
+      color: #000000;
+    }
+
+    #back_button:hover {
+      color: #808080;
+    }
+
     h1 {
-        margin: 5% 0% 2% 0%;
-        color: #FF585D;
-        text-decoration-line: underline;
-        text-align: center;
+      margin: 5% 0% 2% 0%;
+      color: #FF585D;
+      text-decoration-line: underline;
+      text-align: center;
+    }
+
+    h2 {
+      padding: 3% 0% 0% 0%;
     }
 
     #contact_form {
-        width: 100%;
-        margin: 0% auto;
+      width: 100%;
+      margin: 0% auto;
     }
 
     #contact_form label {
-        float: left;
-        width: 30%;
-        margin: 5% 0% 1% 0%;
-        text-align: left;
+      float: left;
+      width: 30%;
+      margin: 5% 0% 1% 0%;
+      text-align: left;
     }
 
     #contact_form p {
-        text-align: left;
+      text-align: left;
     }
 
     #contact_form input[type="text"] {
-        width: 100%;
-        padding: 1%;
-        border: solid black;
-        border-width: 1px;
-        border-radius: 10px;
+      width: 100%;
+      padding: 1%;
+      font-size: 20px;
+      border: solid black;
+      border-radius: 10px;
+      border-width: thin;
+      border-style: solid;
     }
 
     #contact_form input[type="submit"] {
-        width: 20%;
-        margin: 3% 0% 0% 0%;
-        font-size: 20px;
-        border: none;
-        background-color: #FF585D;
-        color: #ffffff;
-        border-radius: 10px;
+      width: 20%;
+      margin: 3% 0% 0% 0%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FFFFFF;
+      color: #FF585D;
     }
 
-    #contact_form input[type="submit"]:active {
-        width: 20%;
-        margin: 3% 0% 0% 0%;
-        font-size: 20px;
-        border: none;
-        background-color: #ffffff;
-        color: #FF585D;
-        border-radius: 10px;
+    #contact_form input[type="submit"]:hover {
+      width: 20%;
+      margin: 3% 0% 0% 0%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FF585D;
+      color: #FFFFFF;
     }
 
     footer {
-        margin: 8% 0% 0% 0%;
-        padding: 5% 0% 5% 0%;
-        font-family: 'Open Sans', sans-serif;
-        text-align: center;
-        position:fixed;
-        bottom:0;
-        width: 100%;
+      margin: 8% 0% 0% 0%;
+      padding: 5% 0% 5% 0%;
+      font-family: 'Open Sans', sans-serif;
+      text-align: center;
+      position:fixed;
+      bottom:0;
+      width: 100%;
     }
 
 }
