--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -35,8 +35,18 @@
   color: #808080;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
+  margin-bottom: 0%;
+  height: 50px;
+  width: 50px;
+}
+
 h1 {
-    margin: 5% 0% 2% 0%;
+    margin: 0% 0% 2% 0%;
     color: #FF585D;
     text-decoration-line: underline;
     text-align: center;
@@ -142,8 +152,18 @@ footer {
       color: #808080;
     }
 
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 3%;
+      margin-bottom: 0%;
+      height: 100px;
+      width: 100px;
+    }
+
     h1 {
-      margin: 5% 0% 2% 0%;
+      margin: 0% 0% 2% 0%;
       color: #FF585D;
       text-decoration-line: underline;
       text-align: center;
