--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -1,9 +1,10 @@
-* {
+/** {
     margin: 0%;
     padding: 0%;
 }
 
 #all_content {
+    overflow: auto;
     margin: 5% 5%;
     font-family: 'Open Sans', sans-serif;
 }
@@ -56,17 +57,17 @@ h2 {
   padding: 3% 0% 0% 0%;
 }
 
-#contact_form {
+form {
     width: 99.5%;
 }
 
-#contact_form label {
+form label {
     float: left;
     width: 30%;
     margin: 5% 0% 1% 0%;
 }
 
-#contact_form input[type="text"] {
+form input[type="text"] {
     width: 100%;
     margin: 3% 0% 0% 0%;
     padding: 1%;
@@ -77,7 +78,7 @@ h2 {
     border-style: solid;
 }
 
-#contact_form input[type="submit"] {
+form input[type="submit"] {
     width: 100%;
     margin: 3% 0% 0% 0%;
     padding: 1%;
@@ -90,27 +91,26 @@ h2 {
     color: #FF585D;
 }
 
-#contact_form input[type="submit"]:active {
+form input[type="submit"]:active {
     width: 100%;
     margin: 3% 0% 0% 0%;
     font-size: 20px;
     border-radius: 6px;
-    border-color: #FF585D;
     border-width: thin;
+    border-color: #FF585D;
     border-style: solid;
     background-color: #FF585D;
     color: #FFFFFF;
 }
 
 footer {
-    padding: 5% 0% 5% 0%;
+    margin: 5% 0% 5% 0%;
+    display: block;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-    position:fixed;
-    bottom:0;
     width: 100%;
 }
-
+*/
 @media (min-width: 700px) {
     * {
         margin: 0%;
@@ -118,7 +118,8 @@ footer {
     }
 
     #all_content {
-      margin: 0% 20% 0% 20%;
+      overflow: auto;
+      margin: 0% 10% 0% 10%;
       font-family: 'Open Sans', sans-serif;
     }
 
@@ -164,7 +165,6 @@ footer {
     h1 {
       margin: 0% 0% 2% 0%;
       color: #FF585D;
-      text-decoration-line: underline;
       text-align: center;
     }
 
@@ -172,23 +172,22 @@ footer {
       padding: 3% 0% 0% 0%;
     }
 
-    #contact_form {
-      width: 100%;
-      margin: 0% auto;
+    form {
+      width: 50%;
     }
 
-    #contact_form label {
+    form label {
       float: left;
-      width: 30%;
+      width: 100%;
       margin: 5% 0% 1% 0%;
       text-align: left;
     }
 
-    #contact_form p {
+    form p {
       text-align: left;
     }
 
-    #contact_form input[type="text"] {
+    form input[type="text"] {
       width: 100%;
       padding: 1%;
       font-size: 20px;
@@ -198,9 +197,10 @@ footer {
       border-style: solid;
     }
 
-    #contact_form input[type="submit"] {
-      width: 20%;
-      margin: 3% 0% 0% 0%;
+    form input[type="submit"] {
+      width: 50%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
       font-size: 20px;
       border-radius: 10px;
       border-color: #FF585D;
@@ -210,9 +210,87 @@ footer {
       color: #FF585D;
     }
 
-    #contact_form input[type="submit"]:hover {
-      width: 20%;
-      margin: 3% 0% 0% 0%;
+    form input[type="submit"]:hover {
+      width: 50%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FF585D;
+      color: #FFFFFF;
+    }
+
+    table {
+      margin-top: 3%;
+      width: 100%;
+      border-collapse: collapse;
+      border: 1px solid #ddd;
+    }
+
+    th {
+      padding: 1px;
+      border-collapse: collapse;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    td {
+      padding: 1px;
+      border-collapse: collapse;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    table button {
+      width: 100%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FFFFFF;
+      color: #FF585D;
+    }
+
+    table button:hover {
+      width: 100%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FF585D;
+      color: #FFFFFF;
+    }
+
+    table form {
+      width: 100%;
+    }
+
+    table form input[type="submit"] {
+      width: 100%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
+      font-size: 20px;
+      border-radius: 10px;
+      border-color: #FF585D;
+      border-width: thin;
+      border-style: solid;
+      background-color: #FFFFFF;
+      color: #FF585D;
+    }
+
+    table form input[type="submit"]:hover {
+      width: 100%;
+      margin: 8% 0% 8% 0%;
+      padding: 1%;
       font-size: 20px;
       border-radius: 10px;
       border-color: #FF585D;
@@ -223,11 +301,10 @@ footer {
     }
 
     footer {
-      padding: 1% 0% 1% 0%;
+      margin: 1% 0% 1% 0%;
+      display: block;
       font-family: 'Open Sans', sans-serif;
       text-align: center;
-      position:fixed;
-      bottom:0;
       width: 100%;
     }
 
