I have now tested everything on the pages and need to now get it to work on all the pages.

--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -123,6 +123,10 @@ footer {
       font-family: 'Open Sans', sans-serif;
     }
 
+    #home_search {
+      margin-top: 3%;
+    }
+
     #menu_top {
       margin: 3% auto;
       text-align: center;
