--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -9,10 +9,6 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-/* #home_search {
-    margin-top: 3%;
-} */
-
 #menu_top {
     margin: 1% auto;
     text-align: center;
@@ -61,6 +57,30 @@ h2 {
     padding: 1% 0% 0% 0%;
 }
 
+button {
+    width: 12.5%;
+    margin: 1% 0%;
+    padding: 0.5%;
+    border-radius: 10px;
+    border-color: #FF585D;
+    border-width: thin;
+    border-style: solid;
+    background-color: #FFFFFF;
+    color: #FF585D;
+}
+
+button:hover {
+    width: 12.5%;
+    margin: 1% 0%;
+    padding: 0.5%;
+    border-radius: 10px;
+    border-color: #FF585D;
+    border-width: thin;
+    border-style: solid;
+    background-color: #FF585D;
+    color: #FFFFFF;
+}
+
 form {
     width: 50%;
 }
@@ -76,32 +96,12 @@ form p {
     text-align: left;
 }
 
-form select {
+form select, form textarea, form input {
   width: 100%;
   padding: 1%;
   border: solid black;
-  /* border-radius: 10px; */
   border-width: thin;
   border-style: solid;
-}
-
-form textarea {
-  width: 100%;
-  height: 10%;
-  padding: 1%;
-  border: solid black;
-  /* border-radius: 10px; */
-  border-width: thin;
-  border-style: solid;
-}
-
-form input[type="text"] {
-    width: 100%;
-    padding: 1%;
-    border: solid black;
-    /* border-radius: 10px; */
-    border-width: thin;
-    border-style: solid;
 }
 
 form input[type="submit"] {
@@ -129,61 +129,27 @@ form input[type="submit"]:hover {
 }
 
 table {
-    margin-top: 3%;
+    margin-top: 1%;
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #ddd;
 }
 
-th {
-    padding: 1px;
-    border-collapse: collapse;
-    border: 1px solid #ddd;
-    text-align: left;
-}
-
-td {
-    padding: 1px;
+th, td {
+    padding: 5px;
     border-collapse: collapse;
     border: 1px solid #ddd;
     text-align: left;
-}
-
-table button {
-    width: 100%;
-    margin: 8% 0% 8% 0%;
-    padding: 1%;
-    font-size: 20px;
-    border-radius: 10px;
-    border-color: #FF585D;
-    border-width: thin;
-    border-style: solid;
-    background-color: #FFFFFF;
-    color: #FF585D;
-}
-
-table button:hover {
-    width: 100%;
-    margin: 8% 0% 8% 0%;
-    padding: 1%;
-    font-size: 20px;
-    border-radius: 10px;
-    border-color: #FF585D;
-    border-width: thin;
-    border-style: solid;
-    background-color: #FF585D;
-    color: #FFFFFF;
 }
 
 table form {
     width: 100%;
 }
 
-table form input[type="submit"] {
+table button, table form input[type="submit"] {
     width: 100%;
-    margin: 8% 0% 8% 0%;
+    margin: 4% 0%;
     padding: 1%;
-    font-size: 20px;
     border-radius: 10px;
     border-color: #FF585D;
     border-width: thin;
@@ -192,11 +158,10 @@ table form input[type="submit"] {
     color: #FF585D;
 }
 
-table form input[type="submit"]:hover {
+table button:hover, table form input[type="submit"]:hover {
     width: 100%;
-    margin: 8% 0% 8% 0%;
+    margin: 4% 0%;
     padding: 1%;
-    font-size: 20px;
     border-radius: 10px;
     border-color: #FF585D;
     border-width: thin;
