--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -7,6 +7,7 @@
     overflow: auto;
     margin: 0% 10% 0% 10%;
     font-family: 'Open Sans', sans-serif;
+    min-height: 93.5vh;
 }
 
 #menu_top {
