--- a/AE2/project/css/style.css
+++ b/AE2/project/css/style.css
@@ -66,6 +66,8 @@ button {
     border-color: #FF585D;
     border-width: thin;
     border-style: solid;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     background-color: #FFFFFF;
     color: #FF585D;
 }
@@ -78,6 +80,8 @@ button:hover {
     border-color: #FF585D;
     border-width: thin;
     border-style: solid;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     background-color: #FF585D;
     color: #FFFFFF;
 }
@@ -99,6 +103,17 @@ form p {
 
 form select, form textarea, form input {
     width: 50%;
+    padding: 1%;
+    border: solid black;
+    border-width: thin;
+    border-style: solid;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+
+form textarea {
+    width: 100%;
+    height: 200px;
     padding: 1%;
     border: solid black;
     border-width: thin;
